codex-rs/tui2/src/status/snapshots/codex_tui2__status__tests__status_snapshot_cached_limits_hide_credits_without_flag.snap
---
source: tui2/src/status/tests.rs
expression: sanitized
---
/status

╭──────────────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v1.6.7)                                                │
│                                                                          │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date            │
│ information on rate limits and credits                                   │
│                                                                          │
│  Model:            gpt-5.1-codex (reasoning none, summaries auto)        │
│  Directory: [[workspace]]                                                │
│  Approval:         on-request                                            │
│  Sandbox:          read-only                                             │
│  Agents.md:        <none>                                                │
│                                                                          │
│  Token usage:      1.05K total  (700 input + 350 output)                 │
│  Context window:   100% left (1.45K used / 272K)                         │
│  5h limit:         [████████░░░░░░░░░░░░] 40% left (11:32 reset)         │
│  Weekly limit:     [█████████████░░░░░░░] 65% left (11:52 reset)         │
│  Warning:          Limit data may be stale; start a new chat to refresh. │
╰──────────────────────────────────────────────────────────────────────────╯
