codex-rs/tui2/src/status/snapshots/codex_tui2__status__tests__status_snapshot_shows_stale_limits_message.snap
---
source: tui2/src/status/tests.rs
expression: sanitized
---
/status

╭──────────────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v1.6.6)                                                │
│                                                                          │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date            │
│ information on rate limits and credits                                   │
│                                                                          │
│  Model:            gpt-5.1-codex-max (reasoning none, summaries auto)    │
│  Directory: [[workspace]]                                                │
│  Approval:         on-request                                            │
│  Sandbox:          read-only                                             │
│  Agents.md:        <none>                                                │
│                                                                          │
│  Token usage:      1.9K total  (1K input + 900 output)                   │
│  Context window:   100% left (2.25K used / 272K)                         │
│  5h limit:         [██████░░░░░░░░░░░░░░] 28% left (03:14 reset)         │
│  Weekly limit:     [████████████░░░░░░░░] 60% left (03:34 reset)         │
│  Warning:          Limit data may be stale; start a new chat to refresh. │
╰──────────────────────────────────────────────────────────────────────────╯
